@@ -5,6 +5,7 @@ import io.windfall.anticheat.core.config.WindfallConfig;
 
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.concurrent.ConcurrentHashMap;
@@ -71,7 +72,7 @@ public class DiscordWebhook {
 
         plugin.getScheduler().runAsync(() -> {
             try {
-                URL url = new URL(webhookUrl);
+                URL url = URI.create(webhookUrl).toURL();
                 HttpURLConnection conn = (HttpURLConnection) url.openConnection();
                 conn.setRequestMethod("POST");
                 conn.setRequestProperty("Content-Type", "application/json");
